quic-rpc-derive/tests/compile_fail/non_enum.rs
use quic_rpc_derive::rpc_requests;

#[rpc_requests(Service, Msg)]
struct Foo;

fn main() {}